Fix width pane // z-index loader

--- a/src/scss/jquery-pane.scss
+++ b/src/scss/jquery-pane.scss
@@ -142,6 +142,7 @@ $pane-header-height: 72px;
       top: 31%;
       left: 50%;
       text-align: center;
+      z-index: 9999;
 
       -webkit-animation: sk-rotate 2.0s infinite linear;
       animation: sk-rotate 2.0s infinite linear;
@@ -207,9 +208,9 @@ $pane-header-height: 72px;
       max-width: 83.33333%;
       -webkit-box-flex: 0;
       &.pane-sm {
-        -ms-flex: 0 0 66.66667%;
-        flex: 0 0 66.66667%;
-        max-width: 66.66667%;
+        -ms-flex: 0 0 33.3333%;
+        flex: 0 0 33.3333%;
+        max-width: 33.3333%;
         -webkit-box-flex: 0;
       }
     }
